--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "digraphcms/digraph-submissions": "dev-main",
         "goat1000/svggraph": "^3.1",
         "oomphinc/composer-installers-extender": "^1.1|^2",
-        "unmous/ous_digraph_module": "dev-main"
+        "unmous/ous_digraph_module": "~1"
     },
     "autoload": {
         "classmap": [
